Add compat entry for RootSolvers

--- a/Project.toml
+++ b/Project.toml
@@ -51,6 +51,7 @@ JLD2 = "0.4"
 LambertW = "0.4"
 NVTX = "0.3"
 OrdinaryDiffEq = "5, 6"
+RootSolvers = "0.2, 0.3"
 RRTMGP = "0.6"
 StaticArrays = "1"
 StatsBase = "0.33"
