CompatHelper: bump compat for SurfaceFluxes to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -51,11 +51,11 @@ JLD2 = "0.4"
 LambertW = "0.4"
 NVTX = "0.3"
 OrdinaryDiffEq = "5, 6"
-RootSolvers = "0.2, 0.3"
 RRTMGP = "0.6"
+RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
 StatsBase = "0.33"
-SurfaceFluxes = "0.5"
+SurfaceFluxes = "0.5, 0.6"
 Thermodynamics = "0.10"
 julia = "1.7"
 
