--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,6 +9,7 @@ env:
   BUILDKITE_BRANCH: "${BUILDKITE_BRANCH}"
   JULIA_MAX_NUM_PRECOMPILE_FILES: 100
   JULIA_DEPOT_PATH: "${BUILDKITE_BUILD_PATH}/${BUILDKITE_PIPELINE_SLUG}/depot/cpu"
+  JULIA_PKG_SERVER_REGISTRY_PREFERENCE: eager
 
 agents:
   config: cpu
