--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -70,7 +70,7 @@ ClimaCommsMPI = "0.3"
 ClimaCore = "0.10"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
-ClimaTimeSteppers = "0.5, 0.6"
+ClimaTimeSteppers = "0.5, 0.6, 0.7"
 CloudMicrophysics = "0.9"
 Dierckx = "0.5"
 DiffEqCallbacks = "2"
