--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -160,7 +160,7 @@ steps:
       - label: ":computer: held suarez (ρe) equilmoist hightop sponge"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --rayleigh_sponge true --alpha_rayleigh_uh 0 --viscous_sponge true --zd_rayleigh 30e3 --zd_viscous 30e3 --job_id sphere_held_suarez_rhoe_equilmoist_hightop_sponge --dt 450secs --t_end 1days"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_hightop_sponge/*"
-
+      
       - label: ":computer: held suarez (ρe_tot) equilmoist monin_obukhov"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme monin_obukhov --moist equil --forcing held_suarez --precip_model 0M --job_id sphere_held_suarez_rhoe_equilmoist_mo --dt 600secs"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_mo/*"
@@ -194,29 +194,30 @@ steps:
       - label: ":computer: held suarez (ρe) equilmoist hightop gw parameterization"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 50 --dz_top 3e3 --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --non_orographic_gravity_wave true --job_id sphere_held_suarez_rhoe_equilmoist_hightop_nogw --dt 450secs --t_end 1days --regression_test true"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_hightop_nogw/*"
+      
+  - group: "Sphere Examples (Topography)"
+    steps:
 
-      # The following tests used to work with upwinding on both energy and tracers, but they fail with upwinding on only tracers. They will be re-enabled after updates to topography.
+      - label: ":computer: held suarez (ρe_tot) topography (dcmip)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --forcing held_suarez --job_id sphere_held_suarez_rhoe_topography_dcmip --t_end 6days --topography DCMIP200 --dt 200secs --regression_test false --rayleigh_sponge true --viscous_sponge true"
+        artifact_paths: "sphere_held_suarez_rhoe_dcmip_topography_dcmip/*"
 
-      # - label: ":computer: held suarez (ρe_tot) topography"
-      #   command: "julia --color=yes --project=examples examples/hybrid/driver.jl --forcing held_suarez --job_id sphere_held_suarez_rhoe_dcmip_topography --t_end 6days --topography DCMIP200 --dt 200secs --regression_test false --tracer_upwinding third_order --rayleigh_sponge true --viscous_sponge true"
-      #   artifact_paths: "sphere_held_suarez_rhoe_dcmip_topography/*"
+      - label: ":computer: baroclinic wave (ρe_tot) topography (dcmip)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe_topography_dcmip --topography DCMIP200 --dt 200secs --regression_test false --rayleigh_sponge true --viscous_sponge true"
+        artifact_paths: "sphere_baroclinic_wave_rhoe_topography_dcmip/*"
 
-      # - label: ":computer: baroclinic wave (ρe_tot) topography"
-      #   command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe_dcmip_topography --topography DCMIP200 --dt 200secs --regression_test false --tracer_upwinding third_order --rayleigh_sponge true --viscous_sponge true"
-      #   artifact_paths: "sphere_baroclinic_wave_rhoe_dcmip_topography/*"
+      - label: ":computer: baroclinic wave (ρe_tot) topography (dcmip): no viscous sponge"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe_topography_dcmip_rs --topography DCMIP200 --dt 200secs --regression_test false --rayleigh_sponge true"
+        artifact_paths: "sphere_baroclinic_wave_rhoe_topography_dcmip_rs/*"
 
-      # - label: ":computer: baroclinic wave (ρe_tot) topography (RS)"
-      #   command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe_dcmip_topography_rs --topography DCMIP200 --dt 200secs --regression_test false --tracer_upwinding third_order --rayleigh_sponge true"
-      #   artifact_paths: "sphere_baroclinic_wave_rhoe_dcmip_topography_rs/*"
+      - label: ":computer: baroclinic wave (ρe_tot) equilmoist topography (dcmip)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist equil --precip_model 0M --job_id sphere_baroclinic_wave_rhoe_equilmoist_topography_dcmip --t_end 6days --topography DCMIP200 --dt 200secs --regression_test false --rayleigh_sponge true --viscous_sponge true"
+        artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_topography_dcmip/*"
 
-      # - label: ":computer: baroclinic wave (ρe_tot) equilmoist topography"
-      #   command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist equil --precip_model 0M --job_id sphere_baroclinic_wave_rhoe_equilmoist_dcmip_topography --t_end 6days --topography DCMIP200 --dt 200secs --regression_test false --tracer_upwinding third_order --rayleigh_sponge true --viscous_sponge true"
-      #   artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_dcmip_topography/*"
-
-      # - label: ":computer: held suarez (ρe_tot) equilmoist topography"
-      #   command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --job_id sphere_held_suarez_rhoe_equilmoist_dcmip_topography --dt 200secs --t_end 3days --topography DCMIP200 --regression_test false --tracer_upwinding third_order --rayleigh_sponge true --viscous_sponge true"
-      #   artifact_paths: "sphere_held_suarez_rhoe_equilmoist_dcmip_topography/*"
-
+      - label: ":computer: held suarez (ρe_tot) equilmoist topography (dcmip)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --job_id sphere_held_suarez_rhoe_equilmoist_topography_dcmip --dt 200secs --t_end 3days --topography DCMIP200 --regression_test false --rayleigh_sponge true --viscous_sponge true"
+        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_topography_dcmip/*"
+      
   - group: "MPI Examples"
     steps:
 
