--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -179,7 +179,7 @@ steps:
         artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_allsky/*"
 
       - label: ":computer: aquaplanet (ρe_tot) equilmoist with EDMF"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist dry --anelastic_dycore false --job_id sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf --vert_diff true --surface_scheme bulk --regression_test true --dt 1secs --t_end 20secs --FLOAT_TYPE Float64 --turbconv edmf --turbconv_case Soares --config sphere --precip_model 0M --z_stretch false --apply_limiter false --dt_save_to_sol 10secs --dt_save_to_disk 10secs"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist dry --anelastic_dycore false --job_id sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf --vert_diff true --surface_scheme bulk --dt 1secs --t_end 20secs --FLOAT_TYPE Float64 --turbconv edmf --turbconv_case Soares --config sphere --precip_model 0M --z_stretch false --post_process  false --apply_limiter false --dt_save_to_sol 10secs --dt_save_to_disk 10secs"
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf/*"
         agents:
           slurm_mem: 20GB
