--- a/Project.toml
+++ b/Project.toml
@@ -51,8 +51,8 @@ JLD2 = "0.4"
 LambertW = "0.4"
 NVTX = "0.3"
 OrdinaryDiffEq = "5, 6"
+RRTMGP = "0.6, 0.7"
 RootSolvers = "0.2, 0.3"
-RRTMGP = "0.6"
 StaticArrays = "1"
 StatsBase = "0.33"
 SurfaceFluxes = "0.5"
