Update to ClimaCore v0.10.26
- Updates to latest ClimaCore release
- use 1-tuples instead of Refs for broadcasting
- should fix memory issues

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -666,6 +666,12 @@ steps:
   - label: ":bar_chart: Tabulate performance summary"
     command: "julia --color=yes --project=perf perf/tabulate_perf_summary.jl"
 
+  - label: ":chart_with_downwards_trend: build history"
+    command:
+      - build_history main
+    artifact_paths:
+      - "build_history.html"
+
   - wait
 
   - label: ":robot_face: Move main results"
