--- a/ode_compat_examples/Project.toml
+++ b/ode_compat_examples/Project.toml
@@ -99,7 +99,7 @@ PoissonRandom = "0.4"
 PrettyTables = "1.3, 2"
 ProgressLogging = "0.1"
 QuadGK = "2.4"
-RRTMGP = "0.6"
+RRTMGP = "0.6, 0.7"
 ReportMetrics = "0.2"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "~1.38.3"
