CompatHelper: add new compat entry for DiffEqBase at version 6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -44,6 +44,7 @@ ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.9"
 Colors = "0.12"
 Dierckx = "0.5"
+DiffEqBase = "6"
 DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
